# octave-cmake-mex

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: FindOctave.cmake  octave.cmake
src/: CMakeLists.txt  file.cpp  file.f90  octave_file_io.h  pow2.cpp  pow2.f90
